// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can process 'and' rules 1`] = `
Array [
  Object {
    "name": "calculateDiscount",
    "operator": ">=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 35,
      "rhs": "25",
      "rhsv": 25,
    },
    "result": true,
    "rule": "price >= 25",
    "state": "{\\"price\\":35}",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "<=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 35,
      "rhs": "50",
      "rhsv": 50,
    },
    "result": true,
    "rule": "price <= 50",
    "state": "{\\"price\\":35}",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "=",
    "parseResult": Object {
      "lhs": "discount",
      "lhsv": "discount",
      "rhs": "5",
      "rhsv": 5,
    },
    "result": Object {
      "discount": 5,
      "price": 35,
    },
    "rule": "discount = 5",
    "state": "{\\"price\\":35,\\"discount\\":5}",
    "stepCount": 3,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": ">=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 35,
      "rhs": "100",
      "rhsv": 100,
    },
    "result": false,
    "rule": "price >= 100",
    "state": "{\\"price\\":35,\\"discount\\":5}",
    "stepCount": 4,
    "stepRow": 1,
  },
]
`;

exports[`can process 'or' rules 1`] = `
Array [
  Object {
    "name": "calculateDiscount",
    "operator": "<=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 35,
      "rhs": "100",
      "rhsv": 100,
    },
    "result": true,
    "rule": "price <= 100",
    "state": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true}}",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "=",
    "parseResult": Object {
      "lhs": "discount",
      "lhsv": "discount",
      "rhs": "5",
      "rhsv": 5,
    },
    "result": Object {
      "discount": 20,
      "price": 35,
      "user": Object {
        "isAdmin": true,
      },
    },
    "rule": "discount = 5",
    "state": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":5}",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": ">=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 35,
      "rhs": "100",
      "rhsv": 100,
    },
    "result": false,
    "rule": "price >= 100",
    "state": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":5}",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "==",
    "parseResult": Object {
      "lhs": "user.isAdmin",
      "lhsv": true,
      "rhs": "true",
      "rhsv": true,
    },
    "result": true,
    "rule": "user.isAdmin == true",
    "state": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":5}",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "=",
    "parseResult": Object {
      "lhs": "discount",
      "lhsv": "discount",
      "rhs": "20",
      "rhsv": 20,
    },
    "result": Object {
      "discount": 20,
      "price": 35,
      "user": Object {
        "isAdmin": true,
      },
    },
    "rule": "discount = 20",
    "state": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":20}",
    "stepCount": 5,
    "stepRow": 1,
  },
]
`;

exports[`can process 'then' rules 1`] = `
Array [
  Object {
    "name": "calculateDiscount",
    "operator": ">=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 100,
      "rhs": "25",
      "rhsv": 25,
    },
    "result": true,
    "rule": "price >= 25",
    "state": "{\\"price\\":100}",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "=",
    "parseResult": Object {
      "lhs": "discount",
      "lhsv": "discount",
      "rhs": "5",
      "rhsv": 5,
    },
    "result": Object {
      "discount": 20,
      "price": 100,
    },
    "rule": "discount = 5",
    "state": "{\\"price\\":100,\\"discount\\":5}",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": ">=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 100,
      "rhs": "100",
      "rhsv": 100,
    },
    "result": true,
    "rule": "price >= 100",
    "state": "{\\"price\\":100,\\"discount\\":5}",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "=",
    "parseResult": Object {
      "lhs": "discount",
      "lhsv": "discount",
      "rhs": "20",
      "rhsv": 20,
    },
    "result": Object {
      "discount": 20,
      "price": 100,
    },
    "rule": "discount = 20",
    "state": "{\\"price\\":100,\\"discount\\":20}",
    "stepCount": 4,
    "stepRow": 1,
  },
]
`;

exports[`can process complex rule expressions 1`] = `
Array [
  Object {
    "name": "calculateDiscount",
    "operator": ">=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 100,
      "rhs": "25",
      "rhsv": 25,
    },
    "result": true,
    "rule": "price >= 25",
    "state": "{\\"price\\":100}",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "=",
    "parseResult": Object {
      "lhs": "discount",
      "lhsv": "discount",
      "rhs": "5 * 2",
      "rhsv": 10,
    },
    "result": Object {
      "discount": 80,
      "price": 100,
    },
    "rule": "discount = 5 * 2",
    "state": "{\\"price\\":100,\\"discount\\":10}",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": ">=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 100,
      "rhs": "100",
      "rhsv": 100,
    },
    "result": true,
    "rule": "price >= 100",
    "state": "{\\"price\\":100,\\"discount\\":10}",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "=",
    "parseResult": Object {
      "lhs": "discount",
      "lhsv": "discount",
      "rhs": "20 * 4",
      "rhsv": 80,
    },
    "result": Object {
      "discount": 80,
      "price": 100,
    },
    "rule": "discount = 20 * 4",
    "state": "{\\"price\\":100,\\"discount\\":80}",
    "stepCount": 4,
    "stepRow": 1,
  },
]
`;

exports[`can process increment operator += 1`] = `
Array [
  Object {
    "name": "calculateDiscount",
    "operator": ">=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 100,
      "rhs": "100",
      "rhsv": 100,
    },
    "result": true,
    "rule": "price >= 100",
    "state": "{\\"price\\":100,\\"discount\\":10}",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "+=",
    "parseResult": Object {
      "lhs": "discount",
      "lhsv": 30,
      "rhs": "20",
      "rhsv": 20,
    },
    "result": Object {
      "discount": 30,
      "price": 100,
    },
    "rule": "discount += 20",
    "state": "{\\"price\\":100,\\"discount\\":30}",
    "stepCount": 2,
    "stepRow": 0,
  },
]
`;

exports[`can process omitted 'else' rules 1`] = `
Array [
  Object {
    "name": "calculateDiscount",
    "operator": ">=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 10,
      "rhs": "100",
      "rhsv": 100,
    },
    "result": false,
    "rule": "price >= 100",
    "state": "{\\"price\\":10}",
    "stepCount": 1,
    "stepRow": 0,
  },
]
`;

exports[`can process rule arrays 1`] = `
Array [
  Object {
    "name": "calculateDiscount",
    "operator": "<=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 90,
      "rhs": "100",
      "rhsv": 100,
    },
    "result": true,
    "rule": "price <= 100",
    "state": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true}}",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "=",
    "parseResult": Object {
      "lhs": "discount",
      "lhsv": "discount",
      "rhs": "5",
      "rhsv": 5,
    },
    "result": Object {
      "discount": 5,
      "price": 90,
      "user": Object {
        "discountApplied": true,
        "isAdmin": true,
      },
    },
    "rule": "discount = 5",
    "state": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":5}",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "=",
    "parseResult": Object {
      "lhs": "user.discountApplied",
      "lhsv": "user.discountApplied",
      "rhs": "true",
      "rhsv": true,
    },
    "result": Object {
      "discount": 5,
      "price": 90,
      "user": Object {
        "discountApplied": true,
        "isAdmin": true,
      },
    },
    "rule": "user.discountApplied = true",
    "state": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true,\\"discountApplied\\":true},\\"discount\\":5}",
    "stepCount": 3,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": ">=",
    "parseResult": Object {
      "lhs": "price",
      "lhsv": 90,
      "rhs": "90",
      "rhsv": 90,
    },
    "result": true,
    "rule": "price >= 90",
    "state": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true,\\"discountApplied\\":true},\\"discount\\":5}",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "!=",
    "parseResult": Object {
      "lhs": "user.discountApplied",
      "lhsv": true,
      "rhs": "true",
      "rhsv": true,
    },
    "result": false,
    "rule": "user.discountApplied != true",
    "state": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true,\\"discountApplied\\":true},\\"discount\\":5}",
    "stepCount": 5,
    "stepRow": 1,
  },
]
`;

exports[`can use conditional array helpers 1`] = `
Array [
  Object {
    "name": "trace",
    "operator": "=",
    "parseResult": Object {
      "lhs": "availableCities",
      "lhsv": "availableCities",
      "rhs": "FILTER_VALUES([\\"London\\", \\"Milan\\"], cities)",
      "rhsv": Array [
        "Denver",
        "LA",
      ],
    },
    "result": Object {
      "availableCities": Array [
        "Denver",
        "LA",
      ],
      "cities": Array [
        "Denver",
        "London",
        "LA",
      ],
      "onlyUSA": true,
    },
    "rule": "availableCities = FILTER_VALUES([\\"London\\", \\"Milan\\"], cities)",
    "state": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"availableCities\\":[\\"Denver\\",\\"LA\\"]}",
    "stepCount": 1,
    "stepRow": 0,
  },
]
`;

exports[`can use conditional array helpers 2`] = `
Array [
  Object {
    "name": "trace",
    "operator": "=",
    "parseResult": Object {
      "lhs": "hasLondon",
      "lhsv": "hasLondon",
      "rhs": "CONTAINS(\\"London\\", cities)",
      "rhsv": true,
    },
    "result": Object {
      "cities": Array [
        "Denver",
        "London",
        "LA",
      ],
      "hasLondon": true,
      "onlyUSA": true,
    },
    "rule": "hasLondon = CONTAINS(\\"London\\", cities)",
    "state": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"hasLondon\\":true}",
    "stepCount": 1,
    "stepRow": 0,
  },
]
`;

exports[`structured input 1`] = `
Array [
  Object {
    "name": "calculateDiscount",
    "operator": "==",
    "parseResult": Object {
      "lhs": "user.plan",
      "lhsv": "premium",
      "rhs": "\\"premium\\"",
      "rhsv": "premium",
    },
    "result": true,
    "rule": "user.plan == \\"premium\\"",
    "state": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100}}",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "=",
    "parseResult": Object {
      "lhs": "discount",
      "lhsv": "discount",
      "rhs": "15",
      "rhsv": 15,
    },
    "result": Object {
      "config": Object {
        "maxDiscount": 10,
      },
      "discount": 15,
      "shoppingCart": Object {
        "discount": 1,
        "total": 100,
      },
      "user": Object {
        "employee": true,
        "plan": "premium",
      },
    },
    "rule": "discount = 15",
    "state": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100},\\"discount\\":15}",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "==",
    "parseResult": Object {
      "lhs": "user.employee",
      "lhsv": true,
      "rhs": "true",
      "rhsv": true,
    },
    "result": true,
    "rule": "user.employee == true",
    "state": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100},\\"discount\\":15}",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "name": "calculateDiscount",
    "operator": "=",
    "parseResult": Object {
      "lhs": "discount",
      "lhsv": "discount",
      "rhs": "15",
      "rhsv": 15,
    },
    "result": Object {
      "config": Object {
        "maxDiscount": 10,
      },
      "discount": 15,
      "shoppingCart": Object {
        "discount": 1,
        "total": 100,
      },
      "user": Object {
        "employee": true,
        "plan": "premium",
      },
    },
    "rule": "discount = 15",
    "state": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100},\\"discount\\":15}",
    "stepCount": 4,
    "stepRow": 1,
  },
]
`;
